Add1stPART+MARKDOWNS

--- a/0-BASICS/1-functions.ipynb
+++ b/0-BASICS/1-functions.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Simple function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -26,6 +33,13 @@
     "\n",
     "# Call shout\n",
     "shout()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Single-parameter functions"
    ]
   },
   {
@@ -56,6 +70,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions that return single values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -83,6 +104,13 @@
     "\n",
     "# Print yell\n",
     "print(yell)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions with multiple parameters"
    ]
   },
   {
@@ -119,6 +147,13 @@
     "\n",
     "# Print yell\n",
     "print(yell)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Functions that return multiple values"
    ]
   },
   {
