--- a/0-BASICS/3-Lambda functions and error-handling.ipynb
+++ b/0-BASICS/3-Lambda functions and error-handling.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### lambda function"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -22,6 +29,13 @@
     "\n",
     "# Print result\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Map() and lambda functions"
    ]
   },
   {
@@ -52,6 +66,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Filter() and lambda functions"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -75,6 +96,13 @@
     "\n",
     "# Print result_list\n",
     "print(result_list)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Reduce() and lambda functions"
    ]
   },
   {
@@ -102,6 +130,13 @@
     "\n",
     "# Print the result\n",
     "print(result)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Error handling with try-except"
    ]
   },
   {
@@ -153,6 +188,13 @@
     "\n",
     "# Call shout_echo\n",
     "shout_echo(\"particle\", echo=\"accelerator\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Error handling by raising an error"
    ]
   },
   {
