--- a/0-BASICS/2-Default arguments, variable-length arguments and scope.ipynb
+++ b/0-BASICS/2-Default arguments, variable-length arguments and scope.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The keyword global"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
@@ -110,6 +117,13 @@
     "\n",
     "# Call twice() and thrice() then print\n",
     "print(twice('hello'), thrice('hello'))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### The keyword nonlocal and nested functions"
    ]
   },
   {
@@ -361,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -418,7 +432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
