--- a/0-BASICS/4-iterators in PythonLand.ipynb
+++ b/0-BASICS/4-iterators in PythonLand.ipynb
@@ -116,6 +116,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Iterators as function arguments"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -201,6 +208,225 @@
     "# Change the start index\n",
     "for index2, value2 in enumerate(mutants, start=1):\n",
     "    print(index2, value2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using zip"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[('charles xavier', 'prof x', 'telepathy'), ('bobby drake', 'iceman', 'thermokinesis'), ('kurt wagner', 'nightcrawler', 'teleportation'), ('max eisenhardt', 'magneto', 'magnetokinesis'), ('kitty pryde', 'shadowcat', 'intangibility')]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a lists\n",
+    "mutants = ['charles xavier', 'bobby drake', 'kurt wagner', 'max eisenhardt', 'kitty pryde']\n",
+    "aliases = ['prof x', 'iceman', 'nightcrawler', 'magneto', 'shadowcat']\n",
+    "powers = ['telepathy', 'thermokinesis', 'teleportation', 'magnetokinesis', 'intangibility']\n",
+    "\n",
+    "# Create a list of tuples: mutant_data\n",
+    "mutant_data = list(zip(mutants,aliases,powers))\n",
+    "\n",
+    "# Print the list of tuples\n",
+    "print(list(mutant_data))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<zip object at 0x000002A6EA1CB900>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a zip object using the three lists: mutant_zip\n",
+    "mutant_zip = zip(mutants,aliases,powers)\n",
+    "\n",
+    "# Print the zip object\n",
+    "print(mutant_zip)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "charles xavier prof x telepathy\n",
+      "bobby drake iceman thermokinesis\n",
+      "kurt wagner nightcrawler teleportation\n",
+      "max eisenhardt magneto magnetokinesis\n",
+      "kitty pryde shadowcat intangibility\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Unpack the zip object and print the tuple values\n",
+    "for value1, value2, value3 in mutant_zip:\n",
+    "    print(value1, value2, value3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Using * and zip to 'unzip'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('charles xavier', 'telepathy') ('bobby drake', 'thermokinesis') ('kurt wagner', 'teleportation') ('max eisenhardt', 'magnetokinesis') ('kitty pryde', 'intangibility')\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Create a zip object from mutants and powers: z1\n",
+    "z1 = zip(mutants,powers)\n",
+    "\n",
+    "# Print the tuples in z1 by unpacking with *\n",
+    "print(*z1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Re-create a zip object from mutants and powers: z1\n",
+    "z1 = zip(mutants,powers)\n",
+    "\n",
+    "# 'Unzip' the tuples in z1 by unpacking with * and zip(): result1, result2\n",
+    "result1, result2 = zip(*z1)\n",
+    "\n",
+    "# Check if unpacked tuples are equivalent to original tuples\n",
+    "print(result1 == mutants)\n",
+    "print(result2 == powers)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Processing large amounts of Twitter data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Initialize an empty dictionary: counts_dict\n",
+    "counts_dict = {}\n",
+    "\n",
+    "# Iterate over the file chunk by chunk\n",
+    "import pandas as pd\n",
+    "for chunk in pd.read_csv('tweets.csv', chunksize = 10):\n",
+    "\n",
+    "    # Iterate over the column in DataFrame\n",
+    "    for entry in chunk['lang'] :\n",
+    "        if entry in counts_dict.keys():\n",
+    "            counts_dict[entry] += 1\n",
+    "        else:\n",
+    "            counts_dict[entry] = 1\n",
+    "\n",
+    "# Print the populated dictionary\n",
+    "print(counts_dict)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Extracting information for large amounts of Twitter data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'en': 97, 'et': 1, 'und': 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define count_entries()\n",
+    "def count_entries(csv_file, c_size, colname):\n",
+    "    \"\"\"Return a dictionary with counts of\n",
+    "    occurrences as value for each key.\"\"\"\n",
+    "    \n",
+    "    # Initialize an empty dictionary: counts_dict\n",
+    "    counts_dict = {}\n",
+    "\n",
+    "    # Iterate over the file chunk by chunk\n",
+    "    for chunk in pd.read_csv(csv_file, chunksize = c_size):\n",
+    "\n",
+    "        # Iterate over the column in DataFrame\n",
+    "        for entry in chunk[colname]:\n",
+    "            if entry in counts_dict.keys():\n",
+    "                counts_dict[entry] += 1\n",
+    "            else:\n",
+    "                counts_dict[entry] = 1\n",
+    "\n",
+    "    # Return counts_dict\n",
+    "    return counts_dict\n",
+    "\n",
+    "# Call count_entries(): result_counts\n",
+    "result_counts = count_entries('tweets.csv', 10,'lang' )\n",
+    "\n",
+    "# Print result_counts\n",
+    "print(result_counts)"
    ]
   }
  ],
